--- a/ansible/host_vars/hamlet.addeo.net.yml
+++ b/ansible/host_vars/hamlet.addeo.net.yml
@@ -40,33 +40,33 @@ brocade_startup_config: |
   vlan 1 name DEFAULT-VLAN by port
   router-interface ve 1
   !
-  vlan 110 by port
+  vlan 110 name MGMT by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   untagged ethe 1/1/12 ethe 1/1/14 to 1/1/15 ethe 1/1/17
   router-interface ve 110
   !
-  vlan 115 by port
+  vlan 115 name SRVMGMT by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   untagged ethe 1/1/2 ethe 1/1/10
   router-interface ve 115
   !
-  vlan 150 by port
+  vlan 150 name LAN by port
   tagged ethe 1/2/1
   router-interface ve 150
   !
-  vlan 151 by port
+  vlan 151 name TRUSTEDWIFI by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   router-interface ve 151
   !
-  vlan 152 by port
+  vlan 152 name GUESTWIFI by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   router-interface ve 152
   !
-  vlan 160 by port
+  vlan 160 name IOT by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   router-interface ve 160
   !
-  vlan 161 by port
+  vlan 161 name IPCAM by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   router-interface ve 161
   !
