--- a/ansible/host_vars/hamlet.addeo.net.yml
+++ b/ansible/host_vars/hamlet.addeo.net.yml
@@ -45,6 +45,10 @@ brocade_startup_config: |
   untagged ethe 1/1/12 ethe 1/1/14 to 1/1/15 ethe 1/1/17
   router-interface ve 110
   !
+  vlan 112 name STORAGE by port
+  untagged ethe 1/2/2 to 1/2/4
+  router-interface ve 112
+  !
   vlan 115 name SRVMGMT by port
   tagged ethe 1/1/3 ethe 1/1/18 ethe 1/1/20 ethe 1/1/22 to 1/1/24 ethe 1/2/1
   untagged ethe 1/1/2 ethe 1/1/10
@@ -160,6 +164,9 @@ brocade_startup_config: |
   interface ve 110
   ip address 10.1.10.5 255.255.255.0
   ip helper-address 1 10.1.10.1
+  !
+  interface ve 112
+  port-name STORAGE
   !
   interface ve 115
   ip helper-address 1 10.1.15.1
