--- a/ansible/host_vars/hamlet.addeo.net.yml
+++ b/ansible/host_vars/hamlet.addeo.net.yml
@@ -45,7 +45,7 @@ brocade_startup_config: |
   untagged ethe 1/1/12 ethe 1/1/14 to 1/1/15 ethe 1/1/17
   router-interface ve 110
   !
-  vlan 112 name STORAGE by port
+  vlan 112 name SAN by port
   untagged ethe 1/2/2 to 1/2/4
   router-interface ve 112
   !
