--- a/ansible/host_vars/kilo.addeo.net.yml
+++ b/ansible/host_vars/kilo.addeo.net.yml
@@ -148,6 +148,10 @@ zfs_datasets:
     properties:
       sharenfs: "rw=10.1.12.79,anonuid=1001,anongid=1001,no_root_squash,no_subtree_check"
     state: present
+  spool/data/backups/bruce.addeo.net:
+    properties:
+      sharenfs: "rw=10.1.12.66,anonuid=1001,anongid=1001,no_root_squash,no_subtree_check"
+    state: present
   spool/data/downloads:
     state: present
   spool/data/downloads/complete:
