--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,8 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[ansible/host_vars/hamlet.addeo.net.yml]
+trim_trailing_whitespace = false
+
 [composer.{json,lock}]
 indent_size = 4
