--- a/ansible/host_vars/loco5ac01.addeo.net.yml
+++ b/ansible/host_vars/loco5ac01.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: House Bridge
 device_hostname: loco5ac01
 device_fqdn: loco5ac01.addeo.net
-device_ip: 10.1.10.35
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi airMAX NanoStation 5AC Loco
 device_model: Loco5AC
-device_mac: E0:63:DA:FE:B0:84
+device_vlan: MGMT
+device_interfaces:
+  - ip: 10.1.10.35
+    mac: E0:63:DA:FE:B0:84
+    default: true
