--- a/ansible/host_vars/beacon02.addeo.net.yml
+++ b/ansible/host_vars/beacon02.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: Upstairs Beacon
 device_hostname: beacon02
 device_fqdn: beacon02.addeo.net
-device_ip: 10.1.10.114 # @TODO use static ip
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi BeaconHD WiFi Extender
 device_model: UAP-BeaconHD
-device_mac: D0:21:F9:72:A0:00
+device_vlan: MGMT
+device_interfaces:
+  - ip: 10.1.10.114 # @TODO use static ip
+    mac: D0:21:F9:72:A0:00
+    default: true
