--- a/ansible/host_vars/beacon03.addeo.net.yml
+++ b/ansible/host_vars/beacon03.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: Kitchen Beacon
 device_hostname: beacon03
 device_fqdn: beacon03.addeo.net
-device_ip: 10.1.10.113 # @TODO use static ip
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi BeaconHD WiFi Extender
 device_model: UAP-BeaconHD
-device_mac: D0:21:F9:72:97:08
+device_vlan: MGMT
+device_interfaces:
+  - ip: 10.1.10.113 # @TODO use static ip
+    mac: D0:21:F9:72:97:08
+    default: true
