--- a/ansible/host_vars/cam01.addeo.net.yml
+++ b/ansible/host_vars/cam01.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: CoopCam
 device_hostname: cam01
 device_fqdn: cam01.addeo.net
-device_ip: 10.1.61.165 # @TODO use static ip
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi G3 Flex Camera
 device_model: UVC-G3-FLEX
-device_mac: 74:83:C2:3F:39:4F
+device_vlan: IPCAM
+device_interfaces:
+  - ip: 10.1.61.165 # @TODO use static ip
+    mac: 74:83:C2:3F:39:4F
+    default: true
