--- a/ansible/host_vars/cam04.addeo.net.yml
+++ b/ansible/host_vars/cam04.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: ServerCam
 device_hostname: cam04
 device_fqdn: cam04.addeo.net
-device_ip: 10.1.61.106 # @TODO use static ip
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi G3 Instant Camera
 device_model: UVC-G3-INS
-device_mac: 74:AC:B9:9F:54:79
+device_vlan: IPCAM
+device_interfaces:
+  - ip: 10.1.61.106 # @TODO use static ip
+    mac: 74:AC:B9:9F:54:79
+    default: true
