--- a/ansible/host_vars/cam05.addeo.net.yml
+++ b/ansible/host_vars/cam05.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: WalterCam
 device_hostname: cam05
 device_fqdn: cam05.addeo.net
-device_ip: 10.1.61.118 # @TODO use static ip
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi G3 Instant Camera
 device_model: UVC-G3-INS
-device_mac: D0:21:F9:98:C3:D9
+device_vlan: IPCAM
+device_interfaces:
+  - ip: 10.1.61.118 # @TODO use static ip
+    mac: D0:21:F9:98:C3:D9
+    default: true
