--- a/ansible/host_vars/cam06.addeo.net.yml
+++ b/ansible/host_vars/cam06.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: Garage
 device_hostname: cam06
 device_fqdn: cam06.addeo.net
-device_ip: 10.1.61.108 # @TODO use static ip
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi G4 Pro Camera
 device_model: UVC-G4-PRO
-device_mac: 74:AC:B9:9F:E2:10
+device_vlan: IPCAM
+device_interfaces:
+  - ip: 10.1.61.108 # @TODO use static ip
+    mac: 74:AC:B9:9F:E2:10
+    default: true
