--- a/ansible/host_vars/loco5ac02.addeo.net.yml
+++ b/ansible/host_vars/loco5ac02.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: Garage Bridge
 device_hostname: loco5ac02
 device_fqdn: loco5ac02.addeo.net
-device_ip: 10.1.10.36
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi airMAX NanoStation 5AC Loco
 device_model: Loco5AC
-device_mac: E0:63:DA:FE:AF:78
+device_vlan: MGMT
+device_interfaces:
+  - ip: 10.1.10.36
+    mac: E0:63:DA:FE:AF:78
+    default: true
