--- a/ansible/host_vars/uappro01.addeo.net.yml
+++ b/ansible/host_vars/uappro01.addeo.net.yml
@@ -1,8 +1,13 @@
 ---
+# Device Information.
 device_name: Garage AP
 device_hostname: uappro01
 device_fqdn: uappro01.addeo.net
-device_ip: 10.1.10.37
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
 device_type: Unifi Access Point # @TODO not accurate
 device_model: UAP Pro # @TODO not accurate
-device_mac: 80:2A:A8:16:C7:5C
+device_vlan: MGMT
+device_interfaces:
+  - ip: 10.1.10.37
+    mac: 80:2A:A8:16:C7:5C
+    default: true
