--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -3,3 +3,18 @@
 ansible_user: ansible
 ansible_ssh_private_key_file: "{{ inventory_dir }}/host_keys/id_rsa.ansible@addeo.net"
 ansible_python_interpreter: /usr/bin/python3
+
+# DNS Configuration.
+dns_domain: addeo.net
+dns_location: ado
+dns_fqdn: "{{ dns_env }}.{{ dns_location }}.{{ dns_domain }}"
+
+# Device Information.
+# Computed default ip for the device.
+device_ip: "{{ device_interfaces | json_query('[?default].ip | [0]') }}"
+# Computed list of all device ips, comma-separated.
+device_ips: "{{ device_interfaces | json_query('[*].ip | join(`,`, @)') }}"
+# Computed FQDN for the device.
+device_fqdn: "{{ device_hostname }}.{{ dns_fqdn }}"
+# Computed short FQDN for the device (FQDN sans environment and location specifiers).
+device_fqdn_short: "{{ device_hostname }}.{{ dns_domain }}"
